--- a/Arbeit/Arbeit.tex
+++ b/Arbeit/Arbeit.tex
@@ -184,7 +184,7 @@ Unser Speichendisplay ist dazu noch günstiger als vergleichbare Modelle. Wie ma
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=7cm]{Stopschild.png}
-	\caption{Skizze des Aufbaus}
+	\caption{Darstellung eines Stopschildes auf dem Speichendisplay}
 \end{figure}
 \subsection{Ergebnisdiskussion}
 Nach einem ersten Start unseres Programmes haben wir festgestellt, dass der Raspberry Pi Zero, den wir wegen seiner geringen Größe und seinem kaum spürbaren Gewicht verwenden wollten, viel zu langsam ist, um ein hochauflösendes Bild darzustellen (siehe Abb. \ref{Vergleich} a)). Der deutlich schnellere Raspberry Pi 3 erstellt hierbei einen viel besseres Bild (siehe Abb. \ref{Vergleich} b)). Dies sieht man auch auf den beiden Bildern:
